More bug fixes:- Remove unsupported 3D board Print warnings in inject-sw-manifest.js for when something goes wrong. Fix FOUC bug on Firefox and misc Firefox glitches Fix color picker initial values Fix settings panel overflow again

--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1037,18 +1037,18 @@ body {
 #settings-modal .modal-dialog {
   max-width: 680px;
 }
-#settings-modal .modal-body {
-  max-height: calc(100vh - 180px);
-}
 #settings-tabs {
   position: sticky;
   top: 0;
   z-index: 10;
   background: var(--bs-modal-bg);
 }
+.settings-pane {
+  max-height: calc(100vh - 180px - 1rem);
+  overflow: auto;
+}
 #settings-modal .tab-pane {
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .tooltip-separator {
@@ -1526,7 +1526,12 @@ input[type="number"]:focus {
   width: 100%;
   position: relative;
   z-index: 0;
-  background: linear-gradient(to right, var(--light-squares) 50%, var(--dark-squares) 50%);
+  background:
+    linear-gradient(var(--light-squares), var(--light-squares))
+      left / 50% 100% no-repeat,
+    linear-gradient(var(--dark-squares), var(--dark-squares))
+      right / 50% 100% no-repeat;
+  background-clip: padding-box;
 }
 .boards-menu-btn:hover {
   z-index: 1;
@@ -1653,7 +1658,10 @@ input[type="number"]:focus {
   border: 1px solid var(--bs-border-color);
   justify-self: center;
   box-sizing: border-box;
+  background-position: 0 0;
   background-size: 400% 400%;
+  will-change: background-image;
+  background-clip: padding-box;
 }
 .mini-board::after {
   all: unset;
